update all pages for captions

--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -45,7 +45,7 @@
 			<main id="main" aria-labelledby="contributors">
 					<div class="aspect-ratio-box">
 						<h2 id="contributors">Project Contributors</h2>
-          	<img loading="" src="/img/about/uvc_0025-900px.jpg" srcset="/img/about/uvc_0025-900px.jpg 900w, /img/about/uvc_0025-750px.jpg 750w, /img/about/uvc_0025-600px.jpg 600w, /img/about/uvc_0025-450px.jpg 450w, /img/about/uvc_0025-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV, https://archive.org/details/grammarornament00Jone.Public domain."/>
+          	<img loading="" src="/img/about/uvc_0025-900px.jpg" srcset="/img/about/uvc_0025-900px.jpg 900w, /img/about/uvc_0025-750px.jpg 750w, /img/about/uvc_0025-600px.jpg 600w, /img/about/uvc_0025-450px.jpg 450w, /img/about/uvc_0025-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -73,6 +73,14 @@
 							<li><strong>Breanna Simpson</strong> (York University)</li>
 							<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 						</ul>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Tile/Header Image Captions</h3>
+
+						<p>(Tile) Owen Jones. “Indian No. 4.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain.</p>
+
+						<p>(Header) Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV. Public domain.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
