--- a/html/lesson_plans/0_lesson-plan-template-caribbean.html
+++ b/html/lesson_plans/0_lesson-plan-template-caribbean.html
@@ -90,6 +90,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -167,6 +168,11 @@
 
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
+
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
 
 					</section>
 
