--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -90,6 +90,12 @@
 						<p>Each lesson plan takes a different approach to answering these questions. The lesson plans on the dramatic monologue and travel narratives start with canonical nineteenth-century British genres to show how pairing them with Black-authored or Africa-centered texts opens up these forms to new avenues of critique. The southern Africa and Ethiopianism lesson plans prove that the empire was messy, unstable, and contested by foregrounding the tensions and connections between and among racial, ethnic, and national groups, and southern Africa’s ever-shifting political landscape. Finally, the lesson plans on archival erasure and sexuality, desire, and family consider how centering slavery in the study of nineteenth-century Britain alters some of the major conceptual and methodological issues of our field. We offer these lesson plans not as experts but as collaborators, with one another and with you.</p>
 					</section>
 
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Asante artist. <a href="https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0">Wrapper</a>. Mid-late 19th century. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. Adinkra cloths were historically worn by Asante royalty during times of mourning. This one was worn by Asantehene Agyeman Prempeh I, the thirteenth king of the Asante state, when he was finally deposed by the British in January 1896 after years of resistance.</p>
+					</section>
+
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
