--- a/html/lesson_plans/african_ethiopianism.html
+++ b/html/lesson_plans/african_ethiopianism.html
@@ -45,7 +45,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Ethiopianism</h2>
-          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas." title="Baptism by John Chilembwe in Liberia or Malawi. ca. 1900-1915, https://www.loc.gov/pictures/item/93505644/. Library of Congress Prints and Photographs Division. No known restrictions on publication"/>
+          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas." title="Baptism by John Chilembwe in Liberia or Malawi. ca. 1900-1915, https://www.loc.gov/pictures/item/93505644/. Library of Congress Prints and Photographs Division. No known restrictions on publication."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -74,6 +74,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -134,6 +135,12 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p><a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> is Assistant Professor of English, Affiliate Faculty in the School of Social Transformation, and Barrett Honors College Faculty at Arizona State University. Her monograph, <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, was published by State University of New York Press in 2021. She is the editor of a Broadview Anthology of British Literature edition, <a href="https://broadviewpress.com/product/the-dead-and-other-stories/#tab-description"><em>The Dead and Other Stories</em></a>, by James Joyce. Her scholarly articles and book chapters have appeared in such places as <a href="https://www.cambridge.org/core/journals/victorian-literature-and-culture/article/settler-colonialism/3BDA9AA967E171B915F4C96FA04077B7"><em>Victorian Literature and Culture</em></a>, <em>Victorian Studies</em>, <em>Genre</em>, and <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-victorian-literary-culture-9780199593736?cc=us&amp;lang=en&amp;"><em>The Oxford Handbook of Victorian Literary Culture</em></a>, edited by Juliet John. Her primary academic interests are Victorian literature and culture, twentieth-century British literature and culture, postcolonial studies, women, gender, and sexuality studies, and genre studies.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p><a href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. ca. 1900-1915. Library of Congress Prints and Photographs Division. No known restrictions on publication.</p>
 					</section>
 
 					<section aria-labelledby="citation">
