--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -88,6 +88,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Captions</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -221,6 +222,15 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p>Breanna Simpson is a doctoral candidate and teaching assistant in the Department of English at York University in Toronto. Her research focuses on gender studies and queer theory, classical reception, world literature, and late Victorian fiction. Her dissertation, <em>In Pursuit of Cupid’s Daughter: The Construction and Control of Desire in Ancient and Victorian Narratives</em>, interrogates the concept of desire by examining forms and practices of reception, power, subjectivity, and identity.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Captions</h3>
+
+						<p>(Left) Maull & Company. <a href="https://upload.wikimedia.org/wikipedia/commons/3/3b/Seacole_photo.jpg">Mary Seacole Photo 1873</a>. Wikimedia Commons, 1873. Public domain. Jennings, Martin, and Owen Blacker. One of the only known photographs of Mary Seacole, the staging of this image offers a glimpse of how Seacole’s medical knowledge and care work were presented and perceived within her lifetime. </p>
+							
+						<p>(Right) <a href="https://upload.wikimedia.org/wikipedia/commons/f/fe/Mary_Seacole_statue%2C_St_Thomas%27_Hospital%2C_front_view.jpg">Mary Seacole Statue</a>. Wikimedia Commons, 2016. <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">Creative Commons CC0 1.0 Universal Public Domain Dedication</a>. This memorial statue of Mary Seacole stands outside of St. Thomas’ Hospital in London, opposite the Houses of Parliament. It’s commissioning and placement was the culmination of a twelve-year campaign to raise funds and awareness of Seacole’s legacy. However, the statue was the subject of much debate and vocal opposition, highlighting the continued discourse concerning Seacole’s significance as a historical figure and her legacy in the history of medicine. 
+						</p>
 					</section>
 
 					<section aria-labelledby="citation">
