--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -84,10 +84,12 @@
                   <li><a href="#materials-2">Neo-Victorian/Postcolonial Literary and Cultural Works</a></li>
                   <li><a href="#materials-3">Historical/Cultural Contexts</a></li>
                   <li><a href="#materials-4">Criticism/Theory</a></li>
+                  <li><a href="#caption">Header Image Caption</a></li>
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
               <li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#caption">Header Image Captions</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -235,6 +237,14 @@
 						<h3 id="biography">Developer Biography</h3>
 
             <p>Indu Ohri is a Preceptor and the current Echols Fellow in the University of Virginia’s English Department. Her book project examines how the ghosts in women’s supernatural fiction reflect various unspeakable social concerns of late Victorian and early twentieth-century Britain. Her research and teaching interests include Victorian and Edwardian women’s ghost stories, Victorian authors of color across the British Empire, and the intersection between feminism and community engagement. She has published her work in the <em>Victorians Institute Journal Digital Annex</em>, <em>Preternature,</em> and <em>Adaptation in Young Adult Novels: Critically Engaging Past and Present</em> (edited by Dana Lawrence and Amy Montz, Bloomsbury, 2020).</p>
+					</section>
+
+          <section aria-labelledby="caption">
+						<h3 id="caption">Header Image Captions</h3>
+
+            <p>(Left) Albert Charles Challen. <a href="https://commons.m.wikimedia.org/wiki/File:Seacole_-_Challen.jpg">Mary Seacole</a>. 1869. National Portrait Gallery. Public domain. Albert Charles Challan painted this portrait of Mary Seacole when she was in her sixties in 1869. This contemporary representation of Seacole visually illustrates different aspects of her identity as a Creole woman and Crimean War nurse. She is wearing a red Caribbean scarf and miniature medals of the British Crimean Medal, the Turkish Order of the Medjidie, and the French Legion of Honour. The portrait received her endorsement for display at a Royal Academy exhibition. It is now located in the National Portrait Gallery in London, England. </p>
+              
+            <p>(Right) Anonymous. <a href="https://www.loc.gov/pictures/item/2003653538/">Susie King Taylor</a>. 1902. Library of Congress, General Collections. Public domain. This photograph serves as the frontispiece of Susie King Taylor’s autobiography Reminiscences of My Life in Camp with the 33rd United States Colored Troops, Late 1st S.C. Volunteers. Her autobiography documents her service as a nurse, laundress, and teacher with the 33rd United States Colored Troops Infantry Regiment during the American Civil War. King’s photograph conveys her strength and resilience as the first African American woman to open a school for freed slaves in Georgia and the only one to publish an autobiography about her Civil War experiences.</p>
 					</section>
 
 					<section aria-labelledby="citation">
