--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -88,6 +88,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -239,6 +240,12 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p>Heidi Kaufman is Associate Professor of English at the University of Oregon. She works on nineteenth-century literary culture, archives, and digital humanities. Her forthcoming book, <em>The Archive’s East End: Literary and Print Culture in 19<sup>th</sup>-Century London</em> (University of Virginia, expected publication 2022) explores the creation and study of archives as a response to cultural silences and marginalized perspectives. Her corresponding digital archive, <a href="https://eastendarchives.net/">The East End Digital Library</a>, creates a space for engaging with writing from the East End of London and of responding to absences in the cultural record. She teaches courses in nineteenth-century literature, digital humanities, and archival theory.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p></p>
 					</section>
 
 					<section aria-labelledby="citation">
