--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -73,6 +73,7 @@
 							<li><a href="#works-cited">Works Cited</a></li>
 							<li><a href="#series">Recontextualizing the Victorians Series</a></li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Syllabus Citation (MLA)</a></li>
             </ol>
           </section>
@@ -127,6 +128,12 @@
 						<h3 id="biography">Developer Biography</h3>
 						
 						<p>Priyanka Anne Jacob is Assistant Professor of English at Loyola University Chicago. Her articles have appeared in <em>Victorian Studies </em>and <em>Victorian Literature and Culture</em>. She is currently completing a book on informational clutter, storage, and the novel form. Her article "The Pocket-book and the Pigeon-hole: <em>Lady Audley’s Secret</em> and the Files of Victorian Fiction" received the Honorable Mention for the 2019 Donald Gray Prize.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Anonymous. “<a href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, edited by G. R. Sims, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12.. Public domain.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
