--- a/html/about/founding_organizers.html
+++ b/html/about/founding_organizers.html
@@ -60,6 +60,12 @@
 
 						<p><img loading="lazy" src="/img/about/organizers/wisnicki-570px.jpg" srcset="/img/about/organizers/wisnicki-570px.jpg 570w, /img/about/organizers/wisnicki-446px.jpg 446w, /img/about/organizers/wisnicki-390px.jpg 390w, /img/about/organizers/wisnicki-350px.jpg 350w, /img/about/organizers/wisnicki-285px.jpg 285w, /img/about/organizers/wisnicki-223px.jpg 223w, /img/about/organizers/wisnicki-195px.jpg 195w, /img/about/organizers/wisnicki-175px.jpg 175w" sizes="(min-width: 1000px) 175px, (min-width: 780px) 195px, (min-width: 740px) 325px, (min-width: 480px) calc(42.92vw + 16px), calc(100vw - 35px)" alt="Head and shoulders portrait of Adrian S. Wisnicki." title="Adrian S. Wisnicki"/><strong>Adrian S. Wisnicki, PhD</strong> (Associate Professor of English, University of Nebraska-Lincoln) teaches courses on Victorian, African, and global literary studies as well as digital humanities and contemporary technology including AI and surveillance. His teaching and research explore how intercultural and interracial dynamics shape literary discourse in both the nineteenth century and present day. He particularly enjoys scholarship that involves international collaboration and that encourages teachers and students to stray outside their intellectual and cultural comfort zones. Among other activities, he is lead developer of<a href="https://onemorevoice.org/index.html"> One More Voice</a>, director of<a href="https://livingstoneonline.org/"> Livingstone Online</a>, and author of <a href="https://awisnicki.github.io/fieldwork_of_empire/"> Fieldwork of Empire</a> (2019).</p>
 					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Jones, Owen. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV.Public domain.</p>
+					</section>
 					
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
