--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -76,6 +76,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -202,6 +203,12 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p>Ji Eun Lee is a BK21 postdoctoral fellow in Interaction English Studies in the Era of AI at Sungkyunkwan University (SKKU) in Seoul, South Korea. She received her bachelor’s and master’s degrees in English Language and Literature from Seoul National University and her Ph.D. in English from UCLA. Her scholarship investigates nineteenth-century British literature, environmental humanities, medical humanities, and postcolonial studies. Her first book-in-progress, <em>Walking London</em>, examines the rise of the novel in relation to the emergence of the city through the perspective of a city-walker, whose gaits are shaped by the material environment and are translated into narrative movements. She also works on contemporary Anglophone literature and has published on Kazuo Ishiguro and Chang-rae Lee in <em>Texas Studies in Literature and Language</em> and <em>American Studies</em>, respectively.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Anonymous. “<a href="https://archive.org/details/b21356853/page/n5/mode/2up">Bird’s-Eye View of the Great Cataracts of the Zambesi (Called Mosioatunya, or Victoria Falls) and of the Zigzag Chasm below the Falls through Which the River Escapes</a>.” <em>Narrative of an Expedition to the Zambesi and Its Tributaries and of the Discovery of the Lakes Shirwa and Nyassa, 1858-1864</em>, by David Livingstone and Charles Livingstone, John Murray, 1865, frontispiece. Public domain.</p>
 					</section>
 
 					<section aria-labelledby="citation">
