--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -80,6 +80,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -153,6 +154,12 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p>Carolyn Betensky is a Professor of English at the University of Rhode Island. She is the author of <em>Feeling for the Poor: Bourgeois Compassion, Social Action, and the Victorian Novel </em>(University of Virginia Press, 2010) and co-translator, with Jonathan Loesberg, of Eugène Sue’s <em>The Mysteries of Paris</em> (Penguin Classics, 2015). Currently she is working on a book project on compartmentalization in Victorian culture as well as on a translation from the French of Jules Vallès’s 1881 novel <em>The Graduate</em>.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Anonymous. “<a href="https://babel.hathitrust.org/cgi/pt?id=uc2.ark:/13960/t4kk94s0d&view=1up&seq=8">The Death of Clotel</a>.” <em>Clotelle; or, The Colored Heroine: A Tale of the Southern States</em>, by William Wells Brown, Lee & Shepard, 1867, frontispiece. Public domain.</p>
 					</section>
 
 					<section aria-labelledby="citation">
