--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -46,7 +46,7 @@
 
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
-          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Anonymous. Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain."/>
+          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Anonymous. Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain. Image courtesy of Monvisions."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 					
@@ -98,6 +98,12 @@
 							</ul>
 
 						<p>In all cases, the goal has been to bring fresh perspectives and critical framing to bear on teaching the work of Mary Seacole and to produce materials that will support the work of scholars and inform the teaching of a new generation of students.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Tile/Header Image Caption</h3>
+
+						<p>Anonymous. <a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. Public domain. Image courtesy of Monvisions.</p>
 					</section>
 
 					<section aria-labelledby="citation">
