--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -45,7 +45,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Decentering Britishness</h2>
-          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market scene with sellers seated before baskets, and many individuals in bright white clothing milling about." title="Anonymous. Jubilee Market, Kingston, Jamaica. ca. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain."/>
+          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market scene with sellers seated before baskets, and many individuals in bright white clothing milling about." title="Anonymous. Jubilee Market, Kingston, Jamaica. ca. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain. Image courtesy of Monvisions."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -87,6 +87,7 @@
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#caption">Header Image Caption</a></li>
               <li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -202,6 +203,12 @@
 						<h3 id="biography">Developer Biography</h3>
 
 						<p>Kira Braham completed her Ph.D. in English at Vanderbilt University in 2020. She will join the faculty of the Louisiana School for Math, Science, and the Arts in Fall 2021. Her fledgling book project, <em>Victorian Vita Activa: Work Ethics and Prowork Politics</em>, explores nineteenth-century philosophies of work and their potential role in reenergizing and reimagining twenty-first century labor politics. Her research interests include nineteenth-century British and transatlantic literatures, Caribbean literatures, working-class literatures, histories and ethnographies of work, science fiction, and utopian studies. Her work has appeared in <em>Extrapolation</em> and <em>The Gissing Journal</em>.</p>
+					</section>
+
+					<section aria-labelledby="caption">
+						<h3 id="caption">Header Image Caption</h3>
+
+						<p>Anonymous. <a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Jubilee Market, Kingston, Jamaica</a>. ca. 1890s. Public domain. Image courtesy of Monvisions.</p>
 					</section>
 
 					<section aria-labelledby="citation">
