--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -97,7 +97,7 @@
 						<h3 id="materials">Suggested Materials</h3>
 
 						<aside class="breakout-quote">
-							<p>“I had always heard that the entrance into Capetown, which is the capital of the Cape Colony, was one of the most picturesque things to be seen on the face of the earth. [. . .] All this has given to Capetown a character for landscape beauty, which I had been told was to be seen at its best as you enter the harbor. But as we entered it early on one Sunday morning neither could the Table Mountain nor the Lion be seen because of the mist, and the opposite shore, with its hills towards The Paarl and Stellenbosch, was equally invisible. Seen as I first saw it Capetown was not an attractive port, and when I found myself standing at the gate of the dockyard for an hour and a quarter waiting [. . .] —I began to think that it was a very disagreeable place indeed.”</p>
+							<p>“I had always heard that the entrance into Capetown, which is the capital of the Cape Colony, was one of the most picturesque things to be seen on the face of the earth. [. . .] All this has given to Capetown a character for landscape beauty, which I had been told was to be seen at its best as you enter the harbor. But as we entered it early on one Sunday morning [. . .] and when I found myself standing at the gate of the dockyard for an hour and a quarter waiting [. . .] — I began to think that it was a very disagreeable place indeed.”</p>
 
 							<p class="right">— Anthony Trollope, <em>South Africa</em> (vol. 1)</p>
 						</aside>
@@ -157,7 +157,7 @@
 								<span class="annotation">Ma-Robert was a steamboat that Livingstone employed for his expedition to the Zambezi in 1858–62. The layout of the scene mimics the typical country landscape found in eighteenth-century landscape paintings. Yet the abundance of animals (crocodiles and birds) and their central positioning challenge the colonial aestheticization of African nature by foregrounding what is usually marginalized: animal life.</span>
 							</p>
 
-							<p>Park, Mungo. <em>Travels in the Interior of Africa</em>. Adam and Charles Black, North Bridge, 1858.<br/>
+							<p>Park, Mungo. <a href="https://archive.org/details/travelsininterio00parkrich"><em>Travels in the Interior of Africa</em></a>. Adam and Charles Black, North Bridge, 1858.<br/>
 								<span class="annotation">The Scottish explorer Mungo Park left records of his expedition to the Niger and encounters with African tribes in his popular book, <em>Travels in the Interior of Africa</em>, the first edition of which was published in 1799. The frontispiece of this book depicts his initial sighting of the Niger, which he describes as “the long sought for majestic Niger, glittering to the morning sun.” The title page, which features Park himself left alone after being looted by gangsters, portrays the white man as hopeless and forsaken in a wild forest, thus countering the triumphant, distanced perspective of the white “seeing-man.” See Pratt’s chapter, “Anti-conquest II: The mystique of reciprocity,” for Park’s “sentimental travel writing” in her book <em>Imperial Encounters</em>, pp. 67–83.</span>
 							</p>
             </section>
@@ -187,11 +187,19 @@
 
 							<p>Buell, Lawrence, et al. “Literature and Environment.” <em>Annual Review of Environment and Resources</em>, vol. 36, 2011, pp. 417–40.</p>
 
+							<p>DeLoughrey, Elizabeth. <em>Allegories of the Anthropocene</em>. Duke University Press, 2019.</p>
+
 							<p>DeLoughrey, Elizabeth, et al., editors. <em>Global Ecologies and the Environmental Humanities: Postcolonial Approaches</em>. Routledge, 2015.</p>
 
 							<p>Griffiths, Devin, and Deanna K. Kreisel. “Introduction: Open Ecologies.” <em>Victorian Literature and Culture</em>, vol. 48, no. 1, pp. 1–28.</p>
 
 							<p>Hensley, Nathan K., and Philip Steer, editors. <em>Ecological Form: System and Aesthetics in the Age of Empire</em>. Fordam University Press, 2018.</p>
+
+							<p>Heise, Ursula K. “Afterword: Postcolonial Ecocriticism and the Question of Literature.” <em>Postcolonial Green: Environmental Politics and World Narratives</em>, edited by Bonnie Roos and Alex Hunt, University of Virginia Press, 2010, pp. 251–58.</p>
+
+							<p>---. <em>Sense of Place and Sense of Planet: The Environmental Imagination of the Global</em>. Oxford University Press, 2008.</p>
+
+							<p>Miller, John. “Postcolonial Ecocriticism and Victorian Studies.” <em>Literature Compass</em>, vol. 9, no. 7, 2012, pp. 476–88.</p>
 
 							<p>Nixon, Rob. “Environmentalism, Postcolonialism, and American Studies.” <em>Slow Violence and the Environmentalism of the Poor</em>, Harvard University Press, 2011, pp. 233–62.</p>
 
