--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
 					<strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 				</section>
 
+				<section class="mailing-list">
+					<p>Join our mailing list or contribute to the project.</p>
+					<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Get involved</a>
+				</section>
+
 				<section aria-labelledby="mission">
 					<h2 id="mission">Mission Statement</h2>
 					<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
