--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -18,7 +18,7 @@
 		<link rel="preload" as="style" href="/css/content.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
-		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link rel="preconnect" href="https://fonts.gstatic.com"/> 
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
@@ -81,6 +81,8 @@
 						<p>(Tile) Owen Jones. “Indian No. 4.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain.</p>
 
 						<p>(Header) Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV. Public domain.</p>
+
+						<p>The organizers of <em>Undisciplining the Victorian Classroom</em> have selected these images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
