--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<link rel="preload" as="style" href="/css/carousel.css?=newVers_0001" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
-		<link rel="preconnect" href="https://fonts.gstatic.com"> 
+		<link rel="preconnect" href="https://fonts.gstatic.com"/> 
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
-		<link rel="preconnect as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
+		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
 		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
@@ -146,7 +146,7 @@
 					</div>
 				</div> -->
 				
-				<section aria-labelledby="call-for-syllabi" id="call">
+				<!-- <section aria-labelledby="call-for-syllabi" id="call">
 					<div class="image-wrapper">
 						<img loading="lazy" src="/img/home/uvc_0006-1170px.jpg" srcset="/img/home/uvc_0006-1170px.jpg 1170w, /img/home/uvc_0006-888px.jpg 888w, /img/home/uvc_0006-585px.jpg 585w, /img/home/uvc_0006-568px.jpg 568w, /img/home/uvc_0006-444px.jpg 444w, /img/home/uvc_0006-284px.jpg 284w" sizes="(min-width: 780px) 585px, (min-width: 740px) 650px, (min-width: 360px) 90.28vw, calc(167.5vw - 265px)" alt="Work of wool and bark, green and yellow patterns surrounded by yellow and black outlines and fringe." title="Anonymous. “Dance Blanket with Diving Whale and Raven Motifs.” c.1880-c.1900, https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs. Art Institute of Chicago, Chicago, 1961.568. Kate S. Buckingham Endowment. CC0 1.0 (https://creativecommons.org/publicdomain/zero/1.0/)."/>
 						<div class="image-caption">
@@ -156,9 +156,9 @@
 								</a>
 							</p>
 						</div>
-					</div>
+					</div> -->
 
-					<h2 id="call-for-syllabi">Call for Syllabi (CFS)</h2>
+					<!-- <h2 id="call-for-syllabi">Call for Syllabi (CFS)</h2>
 					<p class="center"><strong>Deadline:</strong> Accepted on a rolling basis</p>
 					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
@@ -169,12 +169,12 @@
 					<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we especially welcome submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
 					
 					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
-				</section>
+				</section> -->
 			
 				<section aria-labelledby="image-details" class="details">
-					<h2 id="image-details">Image Details</h2>
+					<h2 id="image-details">Carousel Image Details</h2>
 
-						<h3>Slideshow</h3>
+						<!-- <h3>Slideshow</h3> -->
 						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
 
 						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” <a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">A Japanese Artist in London</a>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
@@ -186,8 +186,8 @@
 						<!-- <h4>Coming Soon</h4>
 						<p id="gee">Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Museum of New Zealand | Te Papa Tongarewa, Te Papa (GH007416). Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p> -->
 
-						<h3>Call for Syllabi</h3>
-						<p id="dance">Anonymous Tlingit Artist. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. Art Institute of Chicago, 1961.568. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p>
+						<!-- <h3>Call for Syllabi</h3>
+						<p id="dance">Anonymous Tlingit Artist. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. Art Institute of Chicago, 1961.568. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p> -->
 				</section>
 
 				<section aria-labelledby="site-code">
