update nav to remove fallback

--- a/common/nav.html
+++ b/common/nav.html
@@ -19,7 +19,7 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Email"></i> <span>Email</span></a></li>
 
-					<li role="none"><button style="cursor:pointer" title="Menu" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button><button style="cursor:pointer" title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button title="Menu" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button></li>
 				</ul>
 			</nav>
 
