fix sitemap link

--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -44,7 +44,7 @@
 			<nav id="navFB">
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
@@ -86,7 +86,7 @@
 						<li>Lesson Plans</li>
 						<li><a href="/html/lesson_plans/africa_dramatic_monologue.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
 						<li><a href="/html/lesson_plans/africa_colonial_landscapes.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
+						<li><a href="/html/lesson_plans/africa_southern_africa.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
 						<li><a href="/html/lesson_plans/african_ethiopianism.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
 						<li><a href="/html/lesson_plans/africa_archival_erasure.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Archival Erasure and the Aftermath of Slavery</a></li>
 						<li><a href="/html/lesson_plans/africa_slavery_theories.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Theories of Sexuality, Desire, and Family</a></li>
