--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 			<nav id="navFB">
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="error404">
 					<div class="aspect-ratio-box">
 						<h2 id="error404">404 Error</h2>
-          	<img loading="" src="/img/about/uvc_0027-1800px.jpg" srcset="/img/about/uvc_0027-1800px.jpg 1800w, /img/about/uvc_0027-1650px.jpg 1650w, /img/about/uvc_0027-1500px.jpg 1500w, /img/about/uvc_0027-1350px.jpg 1350w, /img/about/uvc_0027-1200px.jpg 1200w, /img/about/uvc_0027-1050px.jpg 1050w, /img/about/uvc_0027-900px.jpg 900w, /img/about/uvc_0027-750px.jpg 750w, /img/about/uvc_0027-600px.jpg 600w, /img/about/uvc_0027-450px.jpg 450w, /img/about/uvc_0027-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate pattern with blue, red, and gold elements." title="Jones, Owen. “Greek No. 8.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/>
+          	<img loading="" src="/img/about/uvc_0027-1800px.jpg" srcset="/img/about/uvc_0027-1800px.jpg 1800w, /img/about/uvc_0027-1650px.jpg 1650w, /img/about/uvc_0027-1500px.jpg 1500w, /img/about/uvc_0027-1350px.jpg 1350w, /img/about/uvc_0027-1200px.jpg 1200w, /img/about/uvc_0027-1050px.jpg 1050w, /img/about/uvc_0027-900px.jpg 900w, /img/about/uvc_0027-750px.jpg 750w, /img/about/uvc_0027-600px.jpg 600w, /img/about/uvc_0027-450px.jpg 450w, /img/about/uvc_0027-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Intricate pattern with blue, red, and gold elements." title="Jones, Owen. “Greek No. 8.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXI, https://archive.org/details/grammarornament00Jone. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
