--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<nav id="navFB">
 				<ul role="menubar" aria-label="Site sections">
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/index.html"><h1>Undisciplining the Victorian Classroom</h1></a></li>
-					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/site_sections.html"><i class="fa fa-bars"></i></a></button></li>
+					<li role="none"><button title="Menu" aria-label="Show site sections" tabindex="0" id="fallback-button"><a href="/sitemap.html"><i class="fa fa-bars"></i></a></button></li>
 				</ul>
 			</nav>
 
