add sitemap to nav/footer

--- a/common/footer.html
+++ b/common/footer.html
@@ -9,5 +9,7 @@
     <span class="site-detail">Design &amp; admin: <a href="mailto:awisnicki@yahoo.com">Adrian S. Wisnicki</a></span>
     
     <span class="site-detail">Contact: <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a></span>
+
+    <span class="site-detail"><a href="/sitemap.html">Site Map</a></span>
   </p>
 </footer>
