--- a/common/nav.html
+++ b/common/nav.html
@@ -39,6 +39,8 @@
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true" title="About"></i> <span>About</span></a></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Email"></i> <span>Email</span></a></li>
+
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="/sitemap.html"><span>Site Map</span></a></li>
 						</ul>
 				</div>
 			</nav>
