--- a/404.html
+++ b/404.html
@@ -57,7 +57,8 @@
 					</div>
 
 					<section>
-						<p>Eek! <em>Page not found!</em> . . . Get help:</p>
+						<p><strong>Eek! Page not found!</strong></p>
+						<p>Get some help:</p> 
 						<a class="link404" href="/site_map.html">Site Map</a>
 						<p>(Also see the links at top.)</p>
 					</section>
