--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
 					</div>
 
 					<section>
-						<p><strong>Eek! Page not found!</strong></p>
+						<p class="largest"><strong>Eek! Page not found!</strong></p>
 						<p>Get some help:</p> 
 						<a class="link404" href="/site_map.html">Site Map</a>
 						<p>(Also see the links at top.)</p>
