--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -36,7 +36,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container content about contributors">
+		<div class="text-container content about">
 
 			<div data-include="nav"></div>
 
