add found dev terminology

--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>About | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Introduce the organizers, acknowledges the work of contributors, provides insight into the project's critical thinking, and gathers all bibliographic materials."/>
+		<meta name="description" content="Introduce the founding developers, acknowledges the work of contributors, provides insight into the project's critical thinking, and gathers all bibliographic materials."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -55,12 +55,12 @@
 
 				<section aria-labelledby="overview">
 					<h2 id="overview">Overview</h2>
-					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. As present, the section introduces the project organizers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gather in one place the various primary and secondary materials cited throughout the site.</p>
+					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. At present, the section introduces the project's founding developers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gather in one place the various primary and secondary materials cited throughout the site.</p>
 				</section>
 
-				<section aria-labelledby="organizers">
-					<h2 id="organizers">Founding Organizers</h2>
-					<div><a href="/html/about/founding_organizers.html"><img loading=""	src="/img/about/tiles/uvc_0025-1324px.jpg" srcset="/img/about/tiles/uvc_0025-1324px.jpg 1324w, /img/about/tiles/uvc_0025-1136px.jpg 1136w, /img/about/tiles/uvc_0025-930px.jpg 930w, /img/about/tiles/uvc_0025-814px.jpg 814w, /img/about/tiles/uvc_0025-662px.jpg 662w, /img/about/tiles/uvc_0025-568px.jpg 568w, /img/about/tiles/uvc_0025-530px.jpg 530w, /img/about/tiles/uvc_0025-465px.jpg 465w, /img/about/tiles/uvc_0025-407px.jpg 407w, /img/about/tiles/uvc_0025-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/></a></div>
+				<section aria-labelledby="founders">
+					<h2 id="founders">Founding Developers</h2>
+					<div><a href="/html/about/founding_developers.html"><img loading=""	src="/img/about/tiles/uvc_0025-1324px.jpg" srcset="/img/about/tiles/uvc_0025-1324px.jpg 1324w, /img/about/tiles/uvc_0025-1136px.jpg 1136w, /img/about/tiles/uvc_0025-930px.jpg 930w, /img/about/tiles/uvc_0025-814px.jpg 814w, /img/about/tiles/uvc_0025-662px.jpg 662w, /img/about/tiles/uvc_0025-568px.jpg 568w, /img/about/tiles/uvc_0025-530px.jpg 530w, /img/about/tiles/uvc_0025-465px.jpg 465w, /img/about/tiles/uvc_0025-407px.jpg 407w, /img/about/tiles/uvc_0025-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XLIV, https://archive.org/details/grammarornament00Jone. Public domain."/></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
