--- a/sitemap.html
+++ b/sitemap.html
@@ -102,7 +102,7 @@
 	
 							<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 								<ol>
-									<li><a href="/html/about/founding_organizers.html">Founding Organizers</a></li>
+									<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
 									<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 									<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 									<li><a href="/html/about/bibliography.html">Bibliography</a></li>
@@ -119,7 +119,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The organizers of <em>Undisciplining the Victorian Classroom</em> have selected this images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+						<p>Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
