--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>404 | Undisciplining the Victorian Classroom</title>
+    <title>404 Error | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="404 page for Undisciplining the Victorian Classroom. Helps users find their way back into the pages of the site."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="noindex, follow"/>
@@ -68,7 +68,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Owen Jones. “Greek No. 8.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The organizers of <em>Undisciplining the Victorian Classroom</em> have selected this images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+						<p>Owen Jones. “Greek No. 8.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXI. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 			</main>
