--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -57,7 +57,7 @@
 					</div>
 
 					<section>
-						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding organizers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
+						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding developers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
 
 						<ul>
 							<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
@@ -89,7 +89,7 @@
 
 						<p>(Header) Owen Jones. “Persian No. 1.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV. Public domain.</p>
 
-						<p>The organizers of <em>Undisciplining the Victorian Classroom</em> have selected these images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+						<p>The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected these images and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
