--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Values and Practices | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content=""/>
+		<meta name="description" content="Expresses the project's process for curating content and for deciding how concepts and terminology will be presented."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -63,7 +63,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Tile/Header Image Caption</h3>
 
-						<p>Owen Jones. “Indian No. 6.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LIV. Public domain. The organizers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
+						<p>Owen Jones. “Indian No. 6.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LIV. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
 					<section aria-labelledby="citation">
