--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
 			<main id="main">
 
-				<section class="organizers" aria-labelledby="organizers">
-					<h2 id="organizers">Organizers</h2>
+				<section class="founders" aria-labelledby="founders">
+					<h2 id="founders">Founding Developers</h2>
 					<p><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)<br/>
 					<strong>Ryan Fong</strong> (Kalamazoo College)<br/>
 					<strong>Sophia Hsu</strong> (Lehman College, CUNY)<br/>
@@ -171,7 +171,7 @@
 
 					<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
 
-					<p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
+					<p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the founding developers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
 					
 					<p>Submissions are accepted on a rolling basis. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we especially welcome submissions from early-career scholars, contingent faculty, and those with backgrounds that are under-represented in Victorian Studies.</p>
 					
@@ -204,7 +204,7 @@
 
 				<section aria-labelledby="citation">
 					<h2 id="citation">Page Citation (MLA)</h2>
-					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, organizers. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
+					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
 				</section>
 
 			</main>
