update carib template

--- a/0_dev/page-templates/0_lesson-plan-template-caribbean.html
+++ b/0_dev/page-templates/0_lesson-plan-template-caribbean.html
@@ -70,7 +70,7 @@
 
 							<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
-							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="/html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
 						</div>
 					</section>
 
